# AUCA

./: .gitignore  .gitmodules  README.md
Computer Science/Database COM-213/Notes/: 01_Notes_06-09-2019.md
Computer Science/Object Oriented Programming COM-119/Notes/: lecture04.txt
Languages, Humanities, Social Sciences/General Sociology SOC-104.1/Notes/: 01-Home Assignment 09-09-2019.md
Languages, Humanities, Social Sciences/Manas - Texts, Contexts, Traditions HUM-ART-273/Notes/: .02-Home Assignment 09-09-2019.md.swp  01-Home Assignment 04-09-2019.md  02-Home Assignment 09-09-2019.md
comp_sci/Computer Architecture and Organization COM-410.1/assingments/: 02_assignment.md
comp_sci/Computer Architecture and Organization COM-410.1/classwork/: 01_classwork.md  02_classwork.md
comp_sci/Computer Graphics COM-391/labs/: init.sh
comp_sci/Computer Graphics COM-391/labs/01-lab/: 00-lab.cpp  01-lab.cpp  CMakeLists.txt  conanfile.txt
comp_sci/Computer Graphics COM-391/notes/: compile.sh
comp_sci/Computer_Architecture_and_Organization_COM-410.1/assingments/: 03_assignment.md
cs/Com_Graphics-COM391/labs/: init_lab.sh
random/hok_clavijo/: clavijo.md  summary.md
random/love_presentations/: love_presentations.md
scripts/: compile_latex.sh  compile_md.sh  compile_md_beamer.sh
summaries/math/: functional_analysis.aux  functional_analysis.dvi  functional_analysis.fdb_latexmk  functional_analysis.fls  functional_analysis.out  functional_analysis.tex  functional_analysis.toc
warc/: Notes WARC Seminar 15.09.2019.md
warc/followups/: 02-07-2020-discrete-math.md
(+417 files in other folders)
